<resources>
    <string name="app_name">3D Printer App</string>

    <string name="btn_Login">Login</string>
    <string name="btn_Request">Submit Request</string>
    <string name="btn_schedule_now">Schedule Now</string>
    <string name="btn_Printer1">Printer 1</string>
    <string name="str_Printer1_desc">Printer 1 is now available for Today</string>

    <string name="str_Printer4_desc">Printer 4 will be available pizza time</string>
    <string name="str_Printer4">Printer 4</string>

    <string name="str_Printer3_desc">Printer 3 will be available in 57 minutes</string>
    <string name="str_Printer3">Printer 3</string>

    <string name="str_Printer2_desc">Printer 2 will be available in 18 minutes</string>
    <string name="str_Printer2">Printer 2</string>

    <string name="str_Printer5_desc">Printer 5 will be available in 240 bradiniums</string>
    <string name="str_Printer5">Printer 5</string>

    <string name="str_Printer6_desc">Printer 6 will be available in 356 nickoraguas</string>
    <string name="str_Printer6">Printer 6</string>
    <string name="title_activity_login">activity_login</string>

    <string-array name="RequestMover">
        <item>Approved</item>
        <item>Request</item>
        <item>Denied</item>
    </string-array>

    <string-array name="Printers">
        <item>Printer 1</item>
        <item>Printer 2</item>
        <item>Printer 3</item>
        <item>Printer 4</item>
        <item>Printer 5</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello There. General Kenobi.</string>
    <string name="title_activity_main_admin">MainAdminActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>

    <!--https://www.youtube.com/watch?v=on_OrrX7Nw4-->